@@ -1,5 +1,10 @@
 2007-07-05  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-themes.c: (themes_init):
+	* appearance.glade: ellipsize the "Save As" button
+
+2007-07-05  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (update_color_buttons_from_string): don't allocate
 	colors in the colormap
 	(update_cursor_size_scale), (cursor_size_scale_value_changed_cb): don't
